# controller/v1/admin.go
@@ -7,21 +7,28 @@ import (
 	"github.com/miaoming3/wallpaper/server"
 )
 
-type adminController struct {
-	Server *server.AdminServer
+type AdminController struct {
+	*server.AdminServer
 }
 
-func NewAdminController() *adminController {
-	return &adminController{
-		Server: server.NewAdminServer(),
+func NewAdminController() *AdminController {
+	return &AdminController{
+		server.NewAdminServer(),
 	}
 }
 
-func (ac adminController) Login(c *gin.Context) {
+// Login
+// @Summary 管理员登录
+// @Tags 管理员管理
+// @Description 管理员用户登录
+// @Produce application/json
+// @Param AdminLoginData body dto.AdminLoginData true "管理员登录字段"
+// @Router /admin/login [post]
+func (ac *AdminController) Login(c *gin.Context) {
 	var requestLogin dto.AdminLoginData
 	if err := c.ShouldBind(&requestLogin); err != nil {
 		response.Response(c, response.ApiError(response.CLIENTERROR, err))
 		return
 	}
-	response.Response(c, ac.Server.LoginServer(c, &requestLogin))
+	response.Response(c, ac.LoginServer(c, &requestLogin))
 }
